<resources>
    <string name="app_name">Rose Pre-Cadet School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rose Pre-Cadet School</string>
    <string name="nav_header_subtitle">Batakandi, Titas, Cumilla.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_this_school">About This School</string>
    <string name="principal_message">Principal Message</string>
    <string name="acheivements">Acheivements</string>
    <string name="academic">Academic</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="settings">Settings</string>
    <string name="title_activity_pending">PendingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>