<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pink"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="85dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:contentDescription="@string/nav_header_desc"

            android:paddingTop="30dp"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="10dp"
            app:srcCompat="?attr/selectableItemBackground" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo3"
            android:layout_width="50dp"
            android:layout_height="88dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="35dp"
            app:shapeAppearanceOverlay="@style/circ"
            app:srcCompat="@android:drawable/toast_frame"
            app:strokeColor="@color/white"
            app:strokeWidth="0dp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(An ISA Award Winner School)"
        android:textSize="10sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

    <TextView
        android:id="@+id/userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="FULL NAME"
        android:textColor="#D0FABA"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userlevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="USER_LEVEL"
        android:textColor="#E1EFFA" />
</LinearLayout>